Change paragraph & Description

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<p class="info-message" id="info-message">*Поле обязательно для заполнения</p>
 			<input class="submit-button" type="submit" name="submit" id="form-button" value="Отправить" disabled>
 		</form>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur molestiae laboriosam autem. Aliquam, saepe quisquam! Asperiores harum enim rem rerum.</p>
+		<p><i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, asperiores.</i></p>
 	</div>
 	<script src="./script.js"></script>
 </body>
