--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 			<p class="info-message" id="info-message">*Поле обязательно для заполнения</p>
 			<input class="submit-button" type="submit" name="submit" id="form-button" value="Отправить" disabled>
 		</form>
-		<p><i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, asperiores.</i></p>
+		<p><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, asperiores.</b></p>
+		<p style="color:red"><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, asperiores.</b></p>
 	</div>
 	<script src="./script.js"></script>
 </body>
