--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			<input class="submit-button" type="submit" name="submit" id="form-button" value="Отправить" disabled>
 		</form>
 		<p><i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, asperiores.</i></p>
+		<p style="color:green"><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, asperiores.</b></p>
 	</div>
 	<script src="./script.js"></script>
 </body>
